@@ -17,6 +17,7 @@
 #include <stdlib.h>
 #endif
 
+#include "blocks.h"
 #include "utils.h"
 
 /*
@@ -116,4 +117,40 @@ void *joe_realloc(void *ptr, size_t size)
 void joe_free(void *ptr)
 {
 	free(ptr);
+}
+
+
+#ifndef SIG_ERR
+#define SIG_ERR ((sighandler_t) -1)
+#endif
+
+/* wrapper to hide signal interface differrencies */
+int joe_set_signal(int signum, sighandler_t handler)
+{
+	int retval;
+#if HAVE_SIGACTION
+	struct sigaction sact;
+
+	mset(&sact, 0, sizeof(sact));
+	sact.sa_handler = handler;
+#if SA_INTERRUPT
+	sact.sa_flags = SA_INTERRUPT;
+#endif
+	retval = sigaction(signum, &sact, NULL);
+#elif HAVE_SIGVEC
+	struct sigvec svec;
+
+	mset(&svec, 0, sizeof(svec));
+	svec.sv_handler = handler;
+#if HAVE_SV_INTERRUPT
+	svec.sv_flags = SV_INTERRUPT;
+#endif
+	retval = sigvec(signum, &svec, NULL);
+#else
+	retval = (signal(signum, handler) != SIG_ERR) ? 0 : -1;
+#if HAVE_SIGINTERRUPT
+	siginterrupt(signum, 1);
+#endif
+#endif
+	return(retval);
 }
